fix: css for photo col stretch

--- a/src/uikit/Photo/Photo.css
+++ b/src/uikit/Photo/Photo.css
@@ -8,6 +8,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex: 1 1; 
     /**
      * @theme
      */
@@ -44,9 +45,7 @@
     /**
      * @display
      */
-     display: flex;
-     align-items: center;
-     justify-content: center;
+     display: block;
      flex: 1 1; 
      /**
       * @theme
@@ -61,5 +60,5 @@
      padding: 0px;
      margin: 0px;
      width: 100%;
-     height: 100%;
+     /* height: 100%; */
 }
