--- a/src/uikit/Photo/PhotoCol/PhotoCol.css
+++ b/src/uikit/Photo/PhotoCol/PhotoCol.css
@@ -6,6 +6,7 @@
      * @display
      */
     display: flex;
+    flex-direction: column;
     /**
      * @boxmodel
      */
